--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.6.0",
+    "sass": "^1.89.0",
     "use-debounce": "^10.0.4",
     "uuid": "^11.1.0"
   },
